--- a/WebVisualizations/Cloudiness.html
+++ b/WebVisualizations/Cloudiness.html
@@ -13,10 +13,74 @@
 
   <link rel="stylesheet" href="style.css">
 </head>
-<nav class="navbar navbar-expand-lg navbar-dark py-4 justify-content-end" style="background-color: #3b3b3bb2;">
-</nav>
-<div class></div>
 <body>
-    
+  
+<nav class="navbar navbar-expand-lg navbar-dark" style="background-color: rgb(10, 82, 197);">
+<div class="container">
+<button class= "navbar-toggler" type="button" data-toggle= "collapse" data-target= "#navbarNavDropdown" 
+aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+<span class= "navbar-toggler-icon"></span>
+</button>
+<div class ="collapse navbar-collapse" id = "navbarSupportedContent">
+  <ul class ="navbar-nav ml-auto">
+    <li class = "nav-item dropdown">
+      <a class= "nav-link dropdown toggle" href="#" id="navbarDropdown" role = "button" data-toggle="dropdown" 
+      aria-haspopup="true" aria-expanded="false" >
+    Plots
+  </a>
+<div class ="dropdown-menu dropdown-menu right" aria-labelledby="navbarDropdown">
+  <a class="dropdown-item" href="temp.html">Max Temperature</a>
+  <a class="dropdown-item" href="humidity.html">Humidity</a>
+  <a class="dropdown-item" href="cloudiness.html">Cloudiness</a>
+  <a class="dropdown-item" href="windspeed.html">Windspeed</a>
+  
+</div>
+<li>
+  <li class ="nav-item active">
+    <a class = "nav-link" href="comparisons.html"><h7> Comparisons</h7> <span class = "sr-only">(current)</span></a>  
+  </li>
+  <li>
+    <a class = "nav-link" href="data.html"><h7> Source Data</h7> <span class = "sr-only">(current)</span></a>
+  </li>
+  
+  </ul>
+</div>
+</nav>
+
+<div class ="container content">
+  <div class = "row">
+    <div class = "col-md-8">
+      <div class ="col-md-12">
+        <h3>Cloudiness</h3>
+        <hr>
+        <img src="Resouces/assets/immages/Fig3.png" width= "100%"  alt="cloudiness">
+        <br>
+        <p>As the iages displays, we do not see a correlation between latitude and cloudiness</p>
+              </div>
+    </div>
+    <div class = "col-md-4">
+      <div class ="col-md-12">
+        <h3>Visualizations</h3>
+        <hr>
+        <div class = "row">
+          <div class = "col-3 col-md-6" >
+            <a href="temp.html"> <img src="Resouces/assets/immages/Fig1.png" width=" = "100% alt="temperature" >
+            </a>
+          </div>
+          <div class = "col-3 col-md-6" >
+            <a href="humidity.html"> <img src="Resouces/assets/immages/Fig2.png" width=" = "100% alt="humidity" >
+            </a>
+          </div>
+          <div class = "col-3 col-md-6" >
+            <a href="cloudiness.html"> <img src="Resouces/assets/immages/Fig3.png" width=" = "100% alt="cloudiness" >
+            </a>
+          </div>
+          <div class = "col-3 col-md-6" >
+            <a href="windspeed.html"> <img src="Resouces/assets/immages/Fig4.png" width=" = "100% alt="windspeed" >
+            </a>
+          </div>
+          </div>
+  </div>
+</div>
 </body>
 </html>
