updating the repo

--- a/temp.html
+++ b/temp.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Wind Speed</title>
+    <title>Temperature</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
@@ -38,14 +38,15 @@
       </div>
     </li>
 
-    <li class ="nav-item active">
-        <a class = "nav-link" href="comparisons.html"><h7> Comparisons</h7> <span class = "sr-only">(current)</span></a>  
+    <li class ="nav-item">
+        <a class = "nav-link" href="comparisons.html"> Comparisons</a>  
       </li>
-      <li>
-        <a class = "nav-link" href="data.html"><h7> Source Data</h7> <span class = "sr-only">(current)</span></a>
+      <li class ="nav-item">
+        <a class = "nav-link" href="data.html"> Data</a>
       </li>
       
       </ul>
+    </div>
     </div>
     </nav>
 
@@ -53,31 +54,32 @@
         <div class = "row">
             <div class = "col-md-8">
                 <div class = "col-md-12">
-            <h3>Wind Speed</h3>
+            <h3>Temperature</h3>
   <hr>
-  <img src="Resouces/assets/immages/Fig4.png" width ="100%" alt="windspeed">   
+  <img src="Resouces/Assets/images/Fig1.png" width ="100%" alt="temperature">   
   <br>
-  <p>We can analyze from the image that </p>
+  <p>We can analyze from the image that the weather becomes warmer as we get closer to the equator</p>
   </div>
  </div>
 <div class = "col-md-4">
     <div class = "col-md-12">
 <h3>Visualizations</h3>
 <hr>
-<div class = "col-3 col-md-6"></div>
-<a href="temp.html"><img src = "100%" src="Resouces/assets/immages/Fig1.png" width ="100%" alt="temperature"></a>  
+<div class ="row">
+<div class = "col-3 col-md-6">
+<a href="temp.html"><img class = "pic" src="Resouces/Assets/images/Fig1.png" width ="100%" alt="temperature"></a>  
 </div>
 
-<div class = "col-3 col-md-6"></div>
-<a href="humidity.html"><img src = "100%" src="Resouces/assets/immages/Fig2.png" width ="100%" alt="humidity"></a>  
+<div class = "col-3 col-md-6">
+<a href="humidity.html"><img src ="Resouces/Assets/images/Fig2.png" width ="100%" alt="humidity"></a>  
 </div>
 
-<div class = "col-3 col-md-6"></div>
-<a href="Cloudiness.html"><img src = "100%" src="Resouces/assets/immages/Fig3.png" width ="100%" alt="cloudiness"></a>  
+<div class = "col-3 col-md-6">
+<a href="Cloudiness.html"><img src ="Resouces/Assets/images/Fig3.png" width ="100%" alt="cloudiness"></a>  
 </div>
 
-<div class = "col-3 col-md-6"></div>
-<a href="windspeed.html"><img src = "100%" src="Resouces/assets/immages/Fig4.png" width ="100%" alt="windspeed"></a>  
+<div class = "col-3 col-md-6">
+<a href="windspeed.html"><img src ="Resouces/Assets/images/Fig4.png" width ="100%" alt="windspeed"></a>  
 </div>
 </div>
     </div>
