--- a/cloudiness.html
+++ b/cloudiness.html
@@ -17,10 +17,12 @@
   
 <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: rgb(10, 82, 197);">
 <div class="container">
-<button class= "navbar-toggler" type="button" data-toggle= "collapse" data-target= "#navbarNavDropdown" 
-aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+  <a class="navbar-brand text-white href="index.html">Latitude</a>
+<button class= "navbar-toggler" type="button" data-toggle= "collapse" data-target= "#navbarSupportedContent" 
+aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 <span class= "navbar-toggler-icon"></span>
 </button>
+
 <div class ="collapse navbar-collapse" id = "navbarSupportedContent">
   <ul class ="navbar-nav ml-auto">
     <li class = "nav-item dropdown">
@@ -35,15 +37,16 @@ aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navig
   <a class="dropdown-item" href="windspeed.html">Windspeed</a>
   
 </div>
-<li>
-  <li class ="nav-item active">
-    <a class = "nav-link" href="comparisons.html"><h7> Comparisons</h7> <span class = "sr-only">(current)</span></a>  
+</li>
+  <li class ="nav-item">
+    <a class = "nav-link" href="comparisons.html">Comparison</a>  
   </li>
-  <li>
-    <a class = "nav-link" href="data.html"><h7> Source Data</h7> <span class = "sr-only">(current)</span></a>
+  <li class = "nav-item">
+    <a class = "nav-link" href="data.html">Data</a>
   </li>
   
   </ul>
+</div>
 </div>
 </nav>
 
@@ -53,9 +56,9 @@ aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navig
       <div class ="col-md-12">
         <h3>Cloudiness</h3>
         <hr>
-        <img src="Resouces/assets/immages/Fig3.png" width= "100%"  alt="cloudiness">
+        <img src="Resouces/Assets/images/Fig3.png" width= "100%"  alt="cloudiness">
         <br>
-        <p>As the iages displays, we do not see a correlation between latitude and cloudiness</p>
+        <p>As the images displays, we do not see a correlation between latitude and cloudiness</p>
               </div>
     </div>
     <div class = "col-md-4">
@@ -64,22 +67,24 @@ aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navig
         <hr>
         <div class = "row">
           <div class = "col-3 col-md-6" >
-            <a href="temp.html"> <img src="Resouces/assets/immages/Fig1.png" width=" = "100% alt="temperature" >
+            <a href="temp.html"> <img src="Resouces/Assets/images/Fig1.png" width=" = "100% alt="temperature" >
             </a>
           </div>
           <div class = "col-3 col-md-6" >
-            <a href="humidity.html"> <img src="Resouces/assets/immages/Fig2.png" width=" = "100% alt="humidity" >
+            <a href="humidity.html"> <img src="Resouces/Assets/images/Fig2.png" width=" = "100% alt="humidity" >
             </a>
           </div>
           <div class = "col-3 col-md-6" >
-            <a href="cloudiness.html"> <img src="Resouces/assets/immages/Fig3.png" width=" = "100% alt="cloudiness" >
+            <a href="cloudiness.html"> <img src="Resouces/Assets/images/Fig3.png" width=" = "100% alt="cloudiness" >
             </a>
           </div>
           <div class = "col-3 col-md-6" >
-            <a href="windspeed.html"> <img src="Resouces/assets/immages/Fig4.png" width=" = "100% alt="windspeed" >
+            <a href="windspeed.html"> <img src="Resouces/Assets/images/Fig4.png" width=" = "100% alt="windspeed" >
             </a>
           </div>
           </div>
+        </div>
+      </div>
   </div>
 </div>
 </body>
