adding the final HW

--- a/cloudiness.html
+++ b/cloudiness.html
@@ -56,7 +56,7 @@ aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle 
       <div class ="col-md-12">
         <h3>Cloudiness</h3>
         <hr>
-        <img src="Resouces/Assets/images/Fig3.png" width= "100%"  alt="cloudiness">
+        <img src="Resources/Assets/images/Fig3.png" width= "100%"  alt="cloudiness">
         <br>
         <p>As the images displays, we do not see a correlation between latitude and cloudiness</p>
               </div>
@@ -67,19 +67,19 @@ aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle 
         <hr>
         <div class = "row">
           <div class = "col-3 col-md-6" >
-            <a href="temp.html"> <img src="Resouces/Assets/images/Fig1.png" width=" = "100% alt="temperature" >
+            <a href="temp.html"> <img src="Resources/Assets/images/Fig1.png" width=" = "100% alt="temperature" >
             </a>
           </div>
           <div class = "col-3 col-md-6" >
-            <a href="humidity.html"> <img src="Resouces/Assets/images/Fig2.png" width=" = "100% alt="humidity" >
+            <a href="humidity.html"> <img src="Resources/Assets/images/Fig2.png" width=" = "100% alt="humidity" >
             </a>
           </div>
           <div class = "col-3 col-md-6" >
-            <a href="cloudiness.html"> <img src="Resouces/Assets/images/Fig3.png" width=" = "100% alt="cloudiness" >
+            <a href="cloudiness.html"> <img class = "pic" src="Resources/Assets/images/Fig3.png" width=" = "100% alt="cloudiness" >
             </a>
           </div>
           <div class = "col-3 col-md-6" >
-            <a href="windspeed.html"> <img src="Resouces/Assets/images/Fig4.png" width=" = "100% alt="windspeed" >
+            <a href="windspeed.html"> <img src="Resources/Assets/images/Fig4.png" width=" = "100% alt="windspeed" >
             </a>
           </div>
           </div>
@@ -87,5 +87,14 @@ aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle 
       </div>
   </div>
 </div>
+
+<footer class = "page-footer font-small footer-dark">
+  <div class = "footer-copyright text-center py-3"> © Copyright Coding Bootcamp 2020
+    
+  </div>
+</footer>
+
+
+
 </body>
 </html>
