--- a/humidity.html
+++ b/humidity.html
@@ -57,7 +57,7 @@
             <h3>Humidity</h3>
   <hr>
 
-  <img src="Resouces/Assets/images/Fig2.png" width ="100%" alt="humidity">   
+  <img src="Resources/Assets/images/Fig2.png" width ="100%" alt="humidity">   
   <br>
   <p>We can analyze from the image that most of the cities have a humidity level above 60%</p>
   </div>
@@ -69,25 +69,31 @@
 
 <div class = "row">
 <div class = "col-3 col-md-6">
-<a href="temp.html"><img src="Resouces/Assets/images/Fig1.png" width ="100%" alt="temperature"></a>  
+<a href="temp.html"><img src="Resources/Assets/images/Fig1.png" width ="100%" alt="temperature"></a>  
 </div>
 
 <div class = "col-3 col-md-6">
-<a href="humidity.html"><img class = "pic" src="Resouces/Assets/images/Fig2.png" width ="100%" alt="humidity"></a>  
+<a href="humidity.html"><img class = "pic" src="Resources/Assets/images/Fig2.png" width ="100%" alt="humidity"></a>  
 </div>
 
 <div class = "col-3 col-md-6">
-<a href="cloudiness.html"><img src ="Resouces/Assets/images/Fig3.png" width ="100%" alt="cloudiness"></a>  
+<a href="cloudiness.html"><img src ="Resources/Assets/images/Fig3.png" width ="100%" alt="cloudiness"></a>  
 </div>
 
 <div class = "col-3 col-md-6">
-<a href="windspeed.html"><img src ="Resouces/Assets/images/Fig4.png" width ="100%" alt="windspeed"></a>  
+<a href="windspeed.html"><img src ="Resources/Assets/images/Fig4.png" width ="100%" alt="windspeed"></a>  
 </div>
 </div>
     </div>
 </div>
 </div>
     </div>
+
+    <footer class = "page-footer font-small footer-dark">
+      <div class = "footer-copyright text-center py-3"> © Copyright Coding Bootcamp 2020
+        
+      </div>
+    </footer>
     </body>
     </html>
   
