--- a/windspeed.html
+++ b/windspeed.html
@@ -55,9 +55,9 @@
                 <div class = "col-md-12">
             <h3>Wind Speed</h3>
   <hr>
-  <img src="Resouces/Assets/images/Fig4.png" width ="100%" alt="windspeed">   
+  <img src="Resources/Assets/images/Fig4.png" width ="100%" alt="windspeed">   
   <br>
-  <p>We can analyze from the image that </p>
+  <p>We could not draw much information from the wind activity image.  </p>
   </div>
  </div>
 <div class = "col-md-4">
@@ -65,24 +65,29 @@
 <h3>Visualizations</h3>
 <hr>
 <div class = "col-3 col-md-6">
-<a href="temp.html"><img src ="Resouces/Assets/images/Fig1.png" width ="100%" alt="temperature"></a>  
+<a href="temp.html"><img src ="Resources/Assets/images/Fig1.png" width ="100%" alt="temperature"></a>  
 </div>
 
 <div class = "col-3 col-md-6">
-<a href="humidity.html"><img src="Resouces/Assets/images/Fig2.png" width ="100%" alt="humidity"></a>  
+<a href="humidity.html"><img src="Resources/Assets/images/Fig2.png" width ="100%" alt="humidity"></a>  
 </div>
 
 <div class = "col-3 col-md-6">
-<a href="Cloudiness.html"><img src ="Resouces/assets/immages/Fig3.png" width ="100%" alt="cloudiness"></a>  
+<a href="Cloudiness.html"><img src ="Resources/assets/immages/Fig3.png" width ="100%" alt="cloudiness"></a>  
 </div>
 
 <div class = "col-3 col-md-6">
-<a href="windspeed.html"><img class = "pic" src="Resouces/Assets/images/Fig4.png" width ="100%" alt="windspeed"></a>  
+<a href="windspeed.html"><img class = "pic" src="Resources/Assets/images/Fig4.png" width ="100%" alt="windspeed"></a>  
 </div>
 </div>
     </div>
 </div>
 </div>
     </div>
+    <footer class = "page-footer font-small footer-dark">
+      <div class = "footer-copyright text-center py-3"> © Copyright Coding Bootcamp 2020
+        
+      </div>
+    </footer>
     </body>
     </html>
