--- a/comparisons.html
+++ b/comparisons.html
@@ -57,29 +57,35 @@ aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle 
     <div class = "row">
       <div class = "col-md-6">
 <h3 class = "text-center">vs. Max Temperature</h3>
-<a href="temp.html"><img width = "100%" src="Resouces/Assets/images/Fig1.png"></a>   
+<a href="temp.html"><img width = "100%" src="Resources/Assets/images/Fig1.png"></a>   
 
 </div>
 
 <div class = "col-md-6">
     <h3 class = "text-center">vs. Humidity</h3>
-    <a href="humidity.html"><img width = "100%" src="Resouces/Assets/images/Fig2.png"></a>   
+    <a href="humidity.html"><img width = "100%" src="Resources/Assets/images/Fig2.png"></a>   
     </div>
     </div>
 <br>
 <div class = "row">
     <div class = "col-md-6">
 <h3 class = "text-center">vs. Cloudiness</h3>
-<a href="cloudiness.html"><img width = "100%" src="Resouces/Assets/images/Fig3.png"></a>   
+<a href="cloudiness.html"><img width = "100%" src="Resources/Assets/images/Fig3.png"></a>   
 
 </div>
     <div class = "col-md-6">
 <h3 class = "text-center">vs. Windspeed</h3>
-<a href="windspeed.html"><img width = "100%" src="Resouces/Assets/images/Fig4.png"></a>   
+<a href="windspeed.html"><img width = "100%" src="Resources/Assets/images/Fig4.png"></a>   
 
 </div>
 </div>
   </div>
+
+  <footer class = "page-footer font-small footer-dark">
+    <div class = "footer-copyright text-center py-3"> © Copyright Coding Bootcamp 2020
+      
+    </div>
+  </footer>
   </body>
   </html>
 
