--- a/index.html
+++ b/index.html
@@ -53,13 +53,13 @@
         <div class = "row">
             <div class = "col-md-8">
                 <div class = "col-md-12">
-            <h3>Summary: Latitude vs X</h3>
+            <h3>Summary: Latitude vs. X</h3>
   <hr>
   <div class ="thumbnail">
       <img class ="img-thumbnail float-left" src="Resources/assets/images/Fig1.png " width="50%" alt="temperature">
   </div>
-<p>The analysis done shows how the meterological conditions change as the latitude goes closer to the equator</p>
-<p>The website is built to demonstrate the relation of Latitude wit Temperature, Cloudiness, Humidity, and Windspeed </p>
+<p>The purpose of this project was to analyze how weather changes as you get closer to the equator. To accomplish this analysis, we first pulled data from the OpenWeatherMapAPI to assemble a dataset on over 500 cities.</p>
+<p>After assembling the dataset, we used Matplotlib to plot various aspects of the weather vs latitude. Factors we looked at included: temperature, cloudiness, wind speed, and humidity. This site provides the source data and visualizations created as part of the analysis, as well as explanations and descriptions of any trends and correlations witnessed. </p>
 </div>
 </div>
 <div class = "col-md-4">
@@ -68,25 +68,31 @@
 <hr>
 <div class ="row">
 <div class = "col-3 col-md-6">
-<a href="temp.html"><img src = "Resouces/Assets/images/Fig1.png" width ="100%" alt="temperature"></a>  
+<a href="temp.html"><img src = "Resources/Assets/images/Fig1.png" width ="100%" alt="temperature"></a>  
 </div>
 
 <div class = "col-3 col-md-6">
-<a href="humidity.html"><img src ="Resouces/Assets/images/Fig2.png" width ="100%" alt="humidity"></a>  
+<a href="humidity.html"><img src ="Resources/Assets/images/Fig2.png" width ="100%" alt="humidity"></a>  
 </div>
 
 <div class = "col-3 col-md-6">
-<a href="cloudiness.html"><img src ="Resouces/Assets/images/Fig3.png" width ="100%" alt="cloudiness"></a>  
+<a href="cloudiness.html"><img src ="Resources/Assets/images/Fig3.png" width ="100%" alt="cloudiness"></a>  
 </div>
 
 <div class = "col-3 col-md-6">
-<a href="windspeed.html"><img src ="Resouces/Assets/images/Fig4.png" width ="100%" alt="windspeed"></a>  
+<a href="windspeed.html"><img src ="Resources/Assets/images/Fig4.png" width ="100%" alt="windspeed"></a>  
 </div>
 </div>
     </div>
 </div>
 </div>
     </div>
+
+    <footer class = "page-footer font-small footer-dark">
+      <div class = "footer-copyright text-center py-3"> © Copyright Coding Bootcamp 2020
+        
+      </div>
+    </footer>
     </body>
     </html>
   
