--- a/temp.html
+++ b/temp.html
@@ -56,9 +56,9 @@
                 <div class = "col-md-12">
             <h3>Temperature</h3>
   <hr>
-  <img src="Resouces/Assets/images/Fig1.png" width ="100%" alt="temperature">   
+  <img src="Resources/Assets/images/Fig1.png" width ="100%" alt="temperature">   
   <br>
-  <p>We can analyze from the image that the weather becomes warmer as we get closer to the equator</p>
+  <p>As expected, the weather becomes significantly warmer as one approaches the equator ( 0 Deg. Latitude). More interestingly, however, is the fact that the southern hemisphere tends to be warmer this time of the year than the northern hemisphere. This may be due to the tilt of the earth at the time of the year this data was gathered. </p>
   </div>
  </div>
 <div class = "col-md-4">
@@ -67,24 +67,30 @@
 <hr>
 <div class ="row">
 <div class = "col-3 col-md-6">
-<a href="temp.html"><img class = "pic" src="Resouces/Assets/images/Fig1.png" width ="100%" alt="temperature"></a>  
+<a href="temp.html"><img class = "pic" src="Resources/Assets/images/Fig1.png" width ="100%" alt="temperature"></a>  
 </div>
 
 <div class = "col-3 col-md-6">
-<a href="humidity.html"><img src ="Resouces/Assets/images/Fig2.png" width ="100%" alt="humidity"></a>  
+<a href="humidity.html"><img src ="Resources/Assets/images/Fig2.png" width ="100%" alt="humidity"></a>  
 </div>
 
 <div class = "col-3 col-md-6">
-<a href="Cloudiness.html"><img src ="Resouces/Assets/images/Fig3.png" width ="100%" alt="cloudiness"></a>  
+<a href="Cloudiness.html"><img src ="Resources/Assets/images/Fig3.png" width ="100%" alt="cloudiness"></a>  
 </div>
 
 <div class = "col-3 col-md-6">
-<a href="windspeed.html"><img src ="Resouces/Assets/images/Fig4.png" width ="100%" alt="windspeed"></a>  
+<a href="windspeed.html"><img src ="Resources/Assets/images/Fig4.png" width ="100%" alt="windspeed"></a>  
 </div>
 </div>
     </div>
 </div>
 </div>
     </div>
+
+    <footer class = "page-footer font-small footer-dark">
+      <div class = "footer-copyright text-center py-3"> © Copyright Coding Bootcamp 2020
+        
+      </div>
+    </footer>
     </body>
     </html>
